--- a/src/src/main/resource/static/stylus/signin.styl
+++ b/src/src/main/resource/static/stylus/signin.styl
@@ -74,4 +74,143 @@ body {
       }
     }
   }
+
+  .center {
+
+    margin 10px 0 20px
+    position relative
+    height 475px
+    z-index 5
+
+    .signin-box {
+
+      margin 0 auto
+      width 990px
+
+      .form-box {
+
+        position relative
+        top 40px
+        width 346px
+        float right
+        background color-white
+        overflow visible
+        z-index 4
+
+        .tips-wrapper {
+
+          padding-top 10px
+          padding-bottom 10px
+          width 100%
+          text-align center
+          background #fff8f0
+
+          .tips {
+
+            .iconfont {
+              position relative
+              top 2px
+            }
+
+            .text {
+              display inline-block
+              vertical-align middle
+              font-size 12px
+              color color-gray-lv9
+            }
+          }
+        }
+
+        .tabs {
+
+          width 100%
+
+          .tab {
+
+            position relative
+            float left
+            width 50%
+            height 54px
+            font-size 15px
+            text-align center
+            background color-white
+            border-bottom 1px solid color-gray-border
+
+            a {
+              position absolute
+              top 18px
+              left 0
+              width 99%
+              height 18px
+              border-right 1px solid color-gray-border
+            }
+          }
+        }
+
+        .signin {
+
+          .wrapper {
+
+            padding 20px
+
+            .err-msg {
+              
+              .text {
+                height 24px
+                font-size 13px
+                color color-red
+                overflow hidden
+              }
+            }
+
+            .form {
+              
+              .form-item {
+
+                margin-bottom 20px
+                position relative
+                width 306px
+                height 38px
+                border 1px solid #bdbdbd
+
+                .iconfont {
+                  position absolute
+                  top 0
+                  left 0
+                  width 38px
+                  height 38px
+                  line-height 38px
+                  text-align center
+                  border-right 1px solid #bdbdbd
+                  z-index 3
+                }
+
+                .input {
+                  padding 18px 30px 18px 50px
+                  display block
+                  width 100%
+                  height 18px
+                  line-height 18px
+                  float none
+                  border 0
+                  font-size 14px
+                  overflow hidden
+                  outline none
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .banner {
+      position absolute
+      top 0
+      left 0
+      width 100%
+      height 475px
+      background color-red
+    }
+  }
 }
