--- a/src/src/main/resource/static/stylus/_global.styl
+++ b/src/src/main/resource/static/stylus/_global.styl
@@ -9,7 +9,9 @@ color-gray-lva = #aaa
 color-gray-lvc = #ccc
 color-gray-lvd = #ddd
 color-gray-lve = #eee
+color-gray-border = #f4f4f4
 color-white = #fff
+color-red = #f00
 
 * {
   margin 0
@@ -57,6 +59,9 @@ ul, li {
   height 0
   clear both
   content ''
+
+.none
+  display none
 
 .font-size-base
   font-size 14px
