--- a/src/src/main/resource/templates/signin.html
+++ b/src/src/main/resource/templates/signin.html
@@ -29,8 +29,50 @@
         </p>
       </div>
     </div>
-    <div class="body">
+    <div class="center">
+      <div class="signin-box">
+        <div class="form-box">
+          <div class="tips-wrapper">
+            <div class="tips">
+              <i class="iconfont icon-notice"></i>
+              <p class="text">警惕所有未知的转账汇款通知，谨防网络诈骗。</p>
+            </div>
+          </div>
+          <div class="tabs clear">
+            <div class="tab">
+              <a href="javascript:;" class="link-common">扫码登录</a>
+            </div>
+            <div class="tab">
+                <a href="javascript:;" class="link-common">账户登录</a>
+            </div>
+          </div>
+          <div class="signin username-password">
+            <div class="wrapper">
+              <div class="err-msg">
+                <p class="text"></p>
+              </div>
+              <div class="form">
+                <form action="">
+                  <div class="form-item">
+                    <i class="iconfont icon-my_light"></i>
+                    <input type="text" class="input">
+                  </div>
+                  <div class="form-item">
+                    <i class="iconfont icon-lock"></i>
+                    <input type="password" class="input">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="signin qrcode none">
 
+          </div>
+        </div>
+      </div>
+      <div class="banner">
+
+      </div>
     </div>
   </div>
   <div class="footer">
