Fixed the UI of signin page

--- a/src/src/main/resource/static/stylus/_global.styl
+++ b/src/src/main/resource/static/stylus/_global.styl
@@ -9,6 +9,8 @@ color-gray-lva = #aaa
 color-gray-lvc = #ccc
 color-gray-lvd = #ddd
 color-gray-lve = #eee
+color-gray-small = #efefef
+color-gray-large = #4f4e4e
 color-gray-border = #f4f4f4
 color-white = #fff
 color-red = #f00
