--- a/src/src/main/resource/static/stylus/signin.css
+++ b/src/src/main/resource/static/stylus/signin.css
@@ -101,7 +101,6 @@ body {
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  background: rgba(200,200,200,0.1);
 }
 .content .tip .wrapper i {
   position: relative;
@@ -129,6 +128,7 @@ body {
   width: 346px;
   float: right;
   background: #fff;
+  border: 1px solid #ddd;
   overflow: visible;
   z-index: 4;
 }
@@ -137,7 +137,7 @@ body {
   padding-bottom: 10px;
   width: 100%;
   text-align: center;
-  background: #fff8f0;
+  background: #efefef;
 }
 .content .center .signin-box .form-box .tips-wrapper .tips .iconfont {
   position: relative;
@@ -215,5 +215,4 @@ body {
   left: 0;
   width: 100%;
   height: 475px;
-  background: #f00;
 }
