--- a/src/src/main/resource/static/stylus/signin.styl
+++ b/src/src/main/resource/static/stylus/signin.styl
@@ -57,7 +57,6 @@ body {
     padding-bottom 10px
     width 100%
     text-align center
-    background rgba(200, 200, 200, .1)
 
     .wrapper {
 
@@ -94,6 +93,7 @@ body {
         width 346px
         float right
         background color-white
+        border 1px solid color-gray-lvd
         overflow visible
         z-index 4
 
@@ -103,7 +103,7 @@ body {
           padding-bottom 10px
           width 100%
           text-align center
-          background #fff8f0
+          background color-gray-small
 
           .tips {
 
@@ -210,7 +210,6 @@ body {
       left 0
       width 100%
       height 475px
-      background color-red
     }
   }
 }
